# ImageZip

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kye/imagezipdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kye/imagezipdemo/: MainActivity.java  UriToPathUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/kye/imagezipdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
imagezip/: .gitignore  CMakeLists.txt  bintray.gradle  build.gradle
imagezip/src/androidTest/java/com/yunsoft/imagezip/: ExampleInstrumentedTest.java
imagezip/src/main/: AndroidManifest.xml
imagezip/src/main/cpp/: native-lib.cpp
imagezip/src/main/java/com/kye/imagezip/: ImageZipUtil.java
imagezip/src/main/jni/: Android.mk  bitherlibjni.c
imagezip/src/main/res/values/: strings.xml
imagezip/src/test/java/com/yunsoft/imagezip/: ExampleUnitTest.java
